tests/snapshots/examples_fixtures/base__base_alias_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/base/base_alias_error.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E078]: INVALID BASE DIRECTIVE

`import Base as Core` is not allowed.

  --> examples/base/base_alias_error.flx:3:1
  |
3 | import Base as Core
  | ^^^^^^^^^^^^^^^^^^^

Hint:
  Use `import Base` or `import Base except [...]`.
== stdout ==
<not executed>
